--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "bcrypt": "^5.1.1",
     "formidable": "^3.5.2",
     "jsonwebtoken": "^9.0.2",
-    "next": "15.2.0",
+    "next": "^15.2.0",
     "react": "^19.0.0",
     "react-datepicker": "^8.2.1",
     "react-dom": "^19.0.0",
