--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,7 +27,19 @@ services:
     depends_on:
       - postgres
     command: >
-      sh -c "npx prisma generate && npx prisma migrate deploy && npm start"
+      sh -c "npx prisma migrate deploy && npm start"
+
+  populate:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: populate_service
+    depends_on:
+      - postgres
+    environment:
+      DATABASE_URL: postgresql://flynextDB_user:fly123@postgres:5432/FlyNext
+    command: >
+      sh -c "node src/utils/runPopulate.js"
 
   nginx:
     image: nginx:latest
