--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,7 +27,7 @@ services:
     depends_on:
       - postgres
     command: >
-      sh -c "npx prisma migrate deploy && npm start"
+      sh -c "npx prisma generate && npx prisma migrate deploy && npm start"
 
   populate:
     build:
@@ -39,7 +39,7 @@ services:
     environment:
       DATABASE_URL: postgresql://flynextDB_user:fly123@postgres:5432/FlyNext
     command: >
-      sh -c "node src/utils/runPopulate.js"
+      sh -c "npx prisma generate && node src/utils/runPopulate.js"
 
   nginx:
     image: nginx:latest
