--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.4.1",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "formidable": "^3.5.2",
     "jsonwebtoken": "^9.0.2",
     "next": "^15.2.0",
