--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,7 +22,7 @@ services:
       environment:
         DATABASE_URL: postgresql://flynextDB_user:fly123@postgres:5432/FlyNext
       command: >
-        sh -c "npx prisma generate && node src/utils/runPopulate.js"
+        sh -c "npx prisma generate && node ../utils/runPopulate.js"
 
   app:
     build:
