--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "formidable": "^3.5.2",
     "jsonwebtoken": "^9.0.2",
     "next": "^15.2.0",
+    "pdf-lib": "^1.17.1",
     "react": "^19.0.0",
     "react-datepicker": "^8.2.1",
     "react-dom": "^19.0.0",
